modify the src path for my images

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <body>
 </head>
 <h1>1.Mumbai, India</h1>
-<img src="./images/mumbai skyline.jpeg " alt=" This are pictures  of skyline of Mumbai India" width = "230px"/>
-<img src="./images/City images - Copy.jpeg" alt="This are pictures of the Mumbai India" width ="150px"/>
-<img src="./images/The Gateway of India.jpeg" alt="This are pictures of Gateway of India" width = "160px">
+<img src="./Images/Mumbai Skyline.jpeg " alt=" This are pictures  of skyline of Mumbai India" width = "230px"/>
+<img src="./Images/City images - Copy.jpeg"This are pictures of the Mumbai India" width ="150px"/>
+<img src="./Images/The Gateway of India.jpeg" alt="This are pictures of Gateway of India" width = "160px">
 <h2>2.Kingston, Jamaica</h2>
-<img src="./images/Kingston Jamaica.jpeg" alt="Kingston, Jamaica"/>
-<img src="./images/Kingston Jamaica Tourist Attraction.jpeg" alt="Kingston Jamaica Tourist Attraction"/>
+<img src="./Images/Kingston Jamaica.jpeg" alt="Kingston, Jamaica"/>
+<img src="./Images/Kingston Jamaica Tourist Attraction.jpeg" alt="Kingston Jamaica Tourist Attraction"/>
 <img src="./Images/Kingston Jmaica City.jpeg" alt="Kingston Jamaica City"/>
 <h3>3.New York, United States of America(USA)</h3>
-<img src="./images/NewYork cruise port.jpeg" alt="New York Crise Port"/>
-<img src="./images/NewYork Department.jpeg" alt="NewYork State Department"/>
-<img src="./images/NewYork City Statue of Liberty.jpeg" alt="NewYork City Statue of Liberty"/>
+<img src="./Images/NewYork cruise port.jpeg" alt="New York Crise Port"/>
+<img src="./Images/NewYork Department.jpeg" alt="NewYork State Department"/>
+<img src="./Images/NewYork City Statue of Liberty.jpeg" alt="NewYork City Statue of Liberty"/>
 <h4>Packing List</h4>
 <ol>
     <li>Travel Documents: Passport, visas, travel insurance, and copies of important documents.</li>
